# bd_all_labs

./: .env.example  .gitignore  README.md  docker-compose.yml  nginx.conf
backend/: Dockerfile  pyproject.toml
backend/app/: __main__.py
backend/app/config/: default.py
backend/app/db/connection/: __init__.py  mongo.py  neo4j.py  redis.py
backend/app/endpoints/: __init__.py  lab1.py  lab2.py  lab3.py  lab3_search.py  lab4.py  lab5.py  test_mongo.py
backend/app/models/: lab1.py  lab2.py  lab3.py  lab4.py  test_mongo.py
backend/app/utils/: fonts.py  queries_for_lab5.py  queries_for_lab5.txt  teat_data_lab5.py  test_lab4.json
pages/: index.html  lab1.html  lab2.html  lab3.html  lab3_search.html  lab4.html  lab5.html
