[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["BD_labs"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.112.0"
pydantic-settings = "^2.4.0"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.9"
uvicorn = "^0.30.5"
requests = "^2.32.3"
httpx = "^0.23.0"
redis = "^5.2.0"
websockets = "^13.1"
motor = "^3.6.0"
bson = "^0.5.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
